2011-11-10  Jason Merrill  <jason@redhat.com>

	PR c++/51079, DR 495
	* call.c (joust): Check the second conversion sequence
	before checking templates.

2011-11-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/50837
	* pt.c (tsubst_copy_and_build) [IDENTIFIER_NODE]: In C++11 mode
	pass allow_non_integral_constant_expression_p = true to
	finish_id_expression.

2011-11-09  Jason Merrill  <jason@redhat.com>

	PR c++/50972
	* pt.c (maybe_instantiate_noexcept): Check the return value of
	push_tinst_level.

	PR c++/51046
	* parser.c (cp_parser_range_for): check_for_bare_parameter_packs.

	PR c++/51029
	* class.c (build_base_path): Don't ICE in fold_non_dependent_expr.

	* Make-lang.in (check_g++_parallelize): Add dg-torture.exp.
	(check-c++0x): Obsolete.

	* pt.c (invalid_nontype_parm_type_p): Avoid printing "<type error>".

	* pt.c (convert_nontype_argument): Only integral arguments
	get early folding.

	* parser.c (cp_parser_alias_declaration): Don't do semantic
	processing if parsing failed.

2011-11-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51045
	* init.c (build_new_1, build_vec_delete_1, build_delete):
	Use nullptr_node.

2011-11-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/51047
	* search.c (lookup_member): Change to take also a tsubst_flags_t
	parameter.
	(lookup_field, lookup_fnfields): Adjust calls.
	* typeck.c (lookup_destructor, finish_class_member_access_expr,
	build_ptrmemfunc_access_expr): Likewise.
	* class.c (handle_using_decl, maybe_note_name_used_in_class):
	Likewise.
	* pt.c (resolve_typename_type): Likewise.
	* semantics.c (lambda_function): Likewise.
	* parser.c (cp_parser_perform_range_for_lookup,
	cp_parser_lookup_name): Likewise.
	* friend.c (make_friend_class): Likewise.
	* name-lookup.c (pushdecl_maybe_friend_1, get_class_binding,
	do_class_using_decl, lookup_qualified_name): Likewise.
	* cp-tree.h (lookup_member): Adjust declaration.

2011-11-09  Dodji Seketeli  <dodji@redhat.com>

	PR c++/51043